module2-task1 some errors in html resolve

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,163 +20,189 @@
       </h1>
       <section class="basic-products">
         <div class="basic-products__wrapper">
-          <h2 class="basic-product__title">Каталог продукции</h2>
+          <h2 class="basic-products__title">Каталог продукции</h2>
 
           <ul class="basic-products__list">
 
-            <li class="basic-products__item basic-product">
-              <img class="basic-product__img"
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
                    src="blocks/basic-products/img/catalog_1_mobile.jpg"
                    alt="Фото упаковки Cat Energy PRO 500 г" width="140"
                    height="144">
-              <p class="basic-product__title">Cat Energy PRO 500 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
+              <p class="products-item__title">Cat Energy PRO 500 г</p>
+              <ul class="products-item__list">
+                <li class="products-item__volume">
                   <span>Объем</span>
                   <span>500 г</span>
                 </li>
-                <li class="basic-product__taste">
+                <li class="products-item__taste">
                   <span>Вкус</span>
                   <span>Курица</span>
                 </li>
-                <li class="basic-product__price">
+                <li class="products-item__price">
                   <span>Цена</span>
                   <span>700 Р.</span>
                 </li>
               </ul>
-              <button class="basic-product__button button"
+              <button class="products-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="basic-products__item basic-product">
-              <img src="blocks/basic-products/img/catalog_2_mobile.jpg"
-                   alt="Фото упаковки Cat Energy PRO 1000 г">
-              <p class="basic-product__title">Cat Energy PRO 1000 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
+                   src="blocks/basic-products/img/catalog_2_mobile.jpg"
+                   alt="Фото упаковки Cat Energy PRO 1000 г" width="140"
+                   height="144">
+              <p class="products-item__title">Cat Energy PRO 1000 г</p>
+              <ul class="products-item__list">
+                <li class="products-item__volume">
                   <span>Объем</span>
                   <span>1000 г</span>
                 </li>
-                <li class="basic-product__taste">
+                <li class="products-item__taste">
                   <span>Вкус</span>
                   <span>Курица</span>
                 </li>
-                <li class="basic-product__price">
+                <li class="products-item__price">
                   <span>Цена</span>
                   <span>1000 Р.</span>
                 </li>
               </ul>
-              <button class="basic-product__button button"
+              <button class="products-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="basic-products__item basic-product">
-              <img src="blocks/basic-products/img/catalog_3_mobile.jpg"
-                   alt="Фото упаковки Cat Energy PRO 500 г">
-              <p class="basic-product__title">Cat Energy PRO 500 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
-                  <span>Объем</span>
-                  <span>500 г</span>
-                </li>
-                <li class="basic-product__taste">
-                  <span>Вкус</span>
-                  <span>Рыба</span>
-                </li>
-                <li class="basic-product__price">
-                  <span>Цена</span>
-                  <span>700 Р.</span>
-                </li>
-              </ul>
-              <button class="basic-product__button button"
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
+                   src="blocks/basic-products/img/catalog_3_mobile.jpg"
+                   alt="Фото упаковки Cat Energy PRO 500 г" width="140"
+                   height="144">
+              <div class="products-item__wrapper">
+                <p class="products-item__title">Cat Energy PRO 500 г</p>
+                <ul class="products-item__list">
+                  <li class="products-item__volume">
+                    <span>Объем</span>
+                    <span>500 г</span>
+                  </li>
+                  <li class="products-item__taste">
+                    <span>Вкус</span>
+                    <span>Рыба</span>
+                  </li>
+                  <li class="products-item__price">
+                    <span>Цена</span>
+                    <span>700 Р.</span>
+                  </li>
+                </ul>
+                <button class="products-item__button button"
+                        type="button">Заказать</button>
+              </div>
+            </li>
+
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
+                   src="blocks/basic-products/img/catalog_4_mobile.jpg"
+                   alt="Фото упаковки Cat Energy PRO 1000 г" width="140"
+                   height="144">
+              <div class="products-item__wrapper">
+
+                <p class="products-item__title">Cat Energy PRO 1000 г</p>
+                <ul class="products-item__list">
+                  <li class="products-item__volume">
+                    <span>Объем</span>
+                    <span>1000 г</span>
+                  </li>
+                  <li class="products-item__taste">
+                    <span>Вкус</span>
+                    <span>Рыба</span>
+                  </li>
+                  <li class="products-item__price">
+                    <span>Цена</span>
+                    <span>1000 Р.</span>
+                  </li>
+                </ul>
+              </div>
+              <button class="products-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="basic-products__item basic-product">
-              <img src="blocks/basic-products/img/catalog_4_mobile.jpg"
-                   alt="Фото упаковки Cat Energy PRO 1000 г">
-              <p class="basic-product__title">Cat Energy PRO 1000 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
-                  <span>Объем</span>
-                  <span>1000 г</span>
-                </li>
-                <li class="basic-product__taste">
-                  <span>Вкус</span>
-                  <span>Рыба</span>
-                </li>
-                <li class="basic-product__price">
-                  <span>Цена</span>
-                  <span>1000 Р.</span>
-                </li>
-              </ul>
-              <button class="basic-product__button button"
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
+                   src="blocks/basic-products/img/catalog_5_mobile.jpg"
+                   alt="Фото упаковки Cat Energy Slim 500 г" width="140"
+                   height="144">
+              <div class="products-item__wrapper">
+
+                <p class="products-item__title">Cat Energy Slim 500 г</p>
+                <ul class="products-item__list">
+                  <li class="products-item__volume">
+                    <span>Объем</span>
+                    <span>500 г</span>
+                  </li>
+                  <li class="products-item__taste">
+                    <span>Вкус</span>
+                    <span>Рыба</span>
+                  </li>
+                  <li class="products-item__price">
+                    <span>Цена</span>
+                    <span>400 Р.</span>
+                  </li>
+                </ul>
+              </div>
+              <button class="products-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="basic-products__item basic-product">
-              <img src="blocks/basic-products/img/catalog_5_mobile.jpg"
-                   alt="Фото упаковки Cat Energy Slim 500 г">
-              <p class="basic-product__title">Cat Energy Slim 500 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
-                  <span>Объем</span>
-                  <span>500 г</span>
-                </li>
-                <li class="basic-product__taste">
-                  <span>Вкус</span>
-                  <span>Рыба</span>
-                </li>
-                <li class="basic-product__price">
-                  <span>Цена</span>
-                  <span>400 Р.</span>
-                </li>
-              </ul>
-              <button class="basic-product__button button"
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
+                   src="blocks/basic-products/img/catalog_6_mobile.jpg"
+                   alt="Фото упаковки Cat Energy Slim 1000 г" width="140"
+                   height="144">
+              <div class="products-item__wrapper">
+
+                <p class="products-item__title">Cat Energy Slim 1000 г</p>
+                <ul class="products-item__list">
+                  <li class="products-item__volume">
+                    <span>Объем</span>
+                    <span>1000 г</span>
+                  </li>
+                  <li class="products-item__taste">
+                    <span>Вкус</span>
+                    <span>Рыба</span>
+                  </li>
+                  <li class="products-item__price">
+                    <span>Цена</span>
+                    <span>700 Р.</span>
+                  </li>
+                </ul>
+              </div>
+              <button class="products-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="basic-products__item basic-product">
-              <img src="blocks/basic-products/img/catalog_6_mobile.jpg"
-                   alt="Фото упаковки Cat Energy Slim 1000 г">
-              <p class="basic-product__title">Cat Energy Slim 1000 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
-                  <span>Объем</span>
-                  <span>1000 г</span>
-                </li>
-                <li class="basic-product__taste">
-                  <span>Вкус</span>
-                  <span>Рыба</span>
-                </li>
-                <li class="basic-product__price">
-                  <span>Цена</span>
-                  <span>700 Р.</span>
-                </li>
-              </ul>
-              <button class="basic-product__button button"
-                      type="button">Заказать</button>
-            </li>
+            <li class="basic-products__item products-item">
+              <img class="products-item__img"
+                   src="blocks/basic-products/img/catalog_7_mobile.jpg"
+                   alt="Фото упаковки Cat Energy Slim 500 г" width="140"
+                   height="144">
+              <div class="products-item__wrapper">
 
-            <li class="basic-products__item basic-product">
-              <img src="blocks/basic-products/img/catalog_7_mobile.jpg"
-                   alt="Фото упаковки Cat Energy Slim 500 г">
-              <p class="basic-product__title">Cat Energy Slim 500 г</p>
-              <ul class="basic-product__list">
-                <li class="basic-product__volume">
-                  <span>Объем</span>
-                  <span>500 г</span>
-                </li>
-                <li class="basic-product__taste">
-                  <span>Вкус</span>
-                  <span>Рис</span>
-                </li>
-                <li class="basic-product__price">
-                  <span>Цена</span>
-                  <span>500 Р.</span>
-                </li>
-              </ul>
-              <button class="basic-product__button button"
+                <p class="products-item__title">Cat Energy Slim 500 г</p>
+                <ul class="products-item__list">
+                  <li class="products-item__volume">
+                    <span>Объем</span>
+                    <span>500 г</span>
+                  </li>
+                  <li class="products-item__taste">
+                    <span>Вкус</span>
+                    <span>Рис</span>
+                  </li>
+                  <li class="products-item__price">
+                    <span>Цена</span>
+                    <span>500 Р.</span>
+                  </li>
+                </ul>
+              </div>
+              <button class="products-item__button button"
                       type="button">Заказать</button>
             </li>
           </ul>
@@ -185,9 +211,8 @@
             <p class="products-proposal__title">Показать еще 100500 товаров</p>
             <p class="products-proposal__subtitle">На самом деле вкусов гораздо
               больше!</p>
-            <button class="products-proposal__button button"
-                    type="button">Показать
-              все</button>
+            <a class="products-proposal__button button" href="#">Показать
+              все</a>
           </div>
         </div>
       </section>
@@ -198,45 +223,45 @@
 
           <ul class="additional-products__list">
 
-            <li class="additional-products__item additional-product">
-              <p class="additional-product__title">Сахарозаменитель</p>
-              <div class="additional-product__wrap">
-                <span class="additional-product__package">1 упаковка (100
+            <li class="additional-products__item additional-item">
+              <p class="additional-item__title">Сахарозаменитель</p>
+              <div class="additional-item__wrap">
+                <span class="additional-item__package">1 упаковка (100
                   г)</span>
-                <span class="additional-product__price">200 Р.</span>
+                <span class="additional-item__price">200 Р.</span>
               </div>
-              <button class="additional-product__button button"
+              <button class="additional-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="additional-products__item additional-product">
-              <p class="additional-product__title">Питьевая вода</p>
-              <div class="additional-product__wrap">
-                <span class="additional-product__package">5 литров</span>
-                <span class="additional-product__price">50 Р.</span>
+            <li class="additional-products__item additional-item">
+              <p class="additional-item__title">Питьевая вода</p>
+              <div class="additional-item__wrap">
+                <span class="additional-item__package">5 литров</span>
+                <span class="additional-item__price">50 Р.</span>
               </div>
-              <button class="additional-product__button button"
+              <button class="additional-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="additional-products__item additional-product">
-              <p class="additional-product__title">Молоко</p>
-              <div class="additional-product__wrap">
-                <span class="additional-product__package">1 литр</span>
-                <span class="additional-product__price">100 Р.</span>
+            <li class="additional-products__item additional-item">
+              <p class="additional-item__title">Молоко</p>
+              <div class="additional-item__wrap">
+                <span class="additional-item__package">1 литр</span>
+                <span class="additional-item__price">100 Р.</span>
               </div>
-              <button class="additional-product__button button"
+              <button class="additional-item__button button"
                       type="button">Заказать</button>
             </li>
 
-            <li class="additional-products__item additional-product">
-              <p class="additional-product__title">Витамины</p>
-              <div class="additional-product__wrap">
-                <span class="additional-product__package">1 упаковка (30
+            <li class="additional-products__item additional-item">
+              <p class="additional-item__title">Витамины</p>
+              <div class="additional-item__wrap">
+                <span class="additional-item__package">1 упаковка (30
                   г)</span>
-                <span class="additional-product__price">300 Р.</span>
+                <span class="additional-item__price">300 Р.</span>
               </div>
-              <button class="additional-product__button button"
+              <button class="additional-item__button button"
                       type="button">Заказать</button>
             </li>
           </ul>
