--- a/source/form.html
+++ b/source/form.html
@@ -25,48 +25,68 @@
             программу</p>
 
           <fieldset class="customer-form__personal-data personal-data">
-            <label for="cat-name"><span>Имя:*</span></label>
-            <input type="text" name="cat-name" id="cat-name"
-                   placeholder="БАРСИК" required>
+            <ul class="personal-data__list">
+              <li class="personal-data__item">
+                <label for="cat-name"><span>Имя:*</span></label>
+                <input type="text" name="cat-name" id="cat-name"
+                       placeholder="БАРСИК" required>
+              </li>
 
-            <label for="cat-weight"><span>Вес (кг):*</span></label>
-            <input type="text" name="cat-weight" id="cat-weight" placeholder="7"
-                   required>
+              <li class="personal-data__item">
+                <label for="cat-weight"><span>Вес (кг):*</span></label>
+                <input type="text" name="cat-weight" id="cat-weight"
+                       placeholder="7" required>
+              </li>
 
-            <label for="cat-age"><span>Возраст (лет):</span></label>
-            <input type="text" name="cat-age" id="cat-age" placeholder="7">
+              <li class="personal-data__item">
+                <label for="cat-age"><span>Возраст (лет):</span></label>
+                <input type="text" name="cat-age" id="cat-age" placeholder="7">
+              </li>
+            </ul>
           </fieldset>
 
           <fieldset class="customer-form__personal-program personal-program">
-            <input type="radio" name="cat-program" value="cat-grace"
-                   id="cat-grace">
-            <label for="cat-grace"><span>Похудение</span></label>
+            <ul class="personal-program__list">
+              <li class="personal-program__item">
+                <input type="radio" name="cat-program" value="cat-grace"
+                       id="cat-grace">
+                <label for="cat-grace"><span>Похудение</span></label>
+              </li>
 
-            <input type="radio" name="cat-program" value="cat-power"
-                   id="cat-power">
-            <label for="cat-power"><span>Набор массы</span>
-            </label>
+              <li class="personal-program__item">
+                <input type="radio" name="cat-program" value="cat-power"
+                       id="cat-power">
+                <label for="cat-power"><span>Набор массы</span>
+                </label>
+              </li>
 
-            <input type="radio" name="cat-program" value="cat-advice"
-                   id="cat-advice">
-            <label for="cat-advice"><span>Не знаю (Нужен ваш
-                совет)</span></label>
+              <li class="personal-program__item">
+                <input type="radio" name="cat-program" value="cat-advice"
+                       id="cat-advice">
+                <label for="cat-advice"><span>Не знаю (Нужен ваш
+                    совет)</span></label>
+              </li>
+            </ul>
+
           </fieldset>
 
           <fieldset class="customer-form__personal-contacts personal-contacts">
             <legend>
               <span>Контактные данные (владельца кота)</span>
             </legend>
-
-            <label for="customer-email"><span>E-mail:*</span></label>
-            <input type="text" name="customer-email" id="customer-email"
-                   placeholder="kuklachev@gmail.com" required>
-
-            <label for="customer-phone"><span>Телефон:*</span></label>
-            <input type="text" name="customer-phone" id="customer-phone"
-                   placeholder="8 (960) 900-60-90" required>
+            <ul class="personal-contacts__list">
+              <li class="personal-contacts__item">
+                <label for="customer-email"><span>E-mail:*</span></label>
+                <input type="text" name="customer-email" id="customer-email"
+                       placeholder="kuklachev@gmail.com" required>
+              </li>
+              <li class="personal-contacts__item">
+                <label for="customer-phone"><span>Телефон:*</span></label>
+                <input type="text" name="customer-phone" id="customer-phone"
+                       placeholder="8 (960) 900-60-90" required>
+              </li>
+            </ul>
           </fieldset>
-
 
           <fieldset class="customer-form__personal-comment personal-comment">
             <legend>
@@ -112,7 +132,6 @@
 
           <p class="customer-form__notice">* — Обязательные поля</p>
         </form>
-
       </div>
     </main>
 
